fixing text overlap on .Select-arrow and .Select-clear elements

--- a/less/select-control.less
+++ b/less/select-control.less
@@ -62,6 +62,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
+	right: -(@select-arrow-width + @select-padding-horizontal);
 
 	// crop text
 	max-width: 100%;
